--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
 
 
 <div id="about" class=" section container-fluid bg-primary text-center">
-	<div class="col animatedParent" data-sequence='500'>
+	<div class="col animatedParent" data-sequence='500'><br><br> 
 		<p class=" title animated growIn slower" data-id='1'>Stat Addicts</p><br><br><br> 
 		<p class=" subtitle buttons-inline animated bounceInLeft slower text-center" data-id='2'>Football News, Statistics and much more........</p>
 		<p class=" subtitle buttons-inline animated bounceInRight slower text-center" data-id='3'>Sorry!! It's Soccer not "American Football" !! </p>
